--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,3 @@
-flask==1.1.2           # Outdated Flask version with known vulnerabilities
-Jinja2==2.11.3         # Used by Flask, older version to test template issues
-Werkzeug==1.0.1        # Older version for Flask
-itsdangerous==1.1.0    # Used by Flask, potentially vulnerable
-click==7.1.2           # Flask CLI dependency
+Flask==2.1.3
+werkzeug==2.0.3 
 
-# For database interactions
-sqlite3                # For the SQLite database used in the app
-
-# For testing and security scanning
-pytest==6.2.5          # For unit testing
-Flask-Testing==0.8.1   # For testing Flask applications
-
-# For additional vulnerabilities
-pickle-mixin==1.0.2    # Vulnerable deserialization testing
-
-# Optional tools for debugging
-Flask-DebugToolbar==0.11.0  # Debugging tool, use with caution in production
-
-# For security and dependency scans (add to your pipeline)
-snyk==1.1210.0        # Snyk CLI for dependency vulnerability scanning
-bandit==1.7.4         # Python security linter
-zap-cli==0.3.3        # OWASP ZAP CLI for integration into testing pipeline
