--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,19 +42,13 @@ jobs:
         run: |
           docker pull ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-      # 5. Scan Docker image
+      # 5. scan Docker image
       - name: Scan Docker image
         uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          scan-type: 'image'
-          ignore-unfixed: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL'
-          skip-setup-trivy: true
 
-      # 5. Log build activities
+      # 6. Log build activities
       - name: Log build to file
         if: always()
         run: |
@@ -63,7 +57,7 @@ jobs:
           echo "Commit: ${{ github.sha }}" >> build_audit.log
           echo "Status: ${{ job.status }}" >> build_audit.log
 
-      # 6. Upload audit log as an artifact
+      # 7. Upload audit log as an artifact
       - name: Upload build log
         uses: actions/upload-artifact@v4
         with:
