--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,8 +58,10 @@ jobs:
           name: build-audit-log
           path: build_audit.log
 
+#----------------------------------------------------------
+
   dockertest:
-    name: Run tests
+    name: Run Docker tests
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -68,6 +70,3 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-
-
-#----------------------------------------------------------
