--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,14 +58,12 @@ jobs:
           name: build-audit-log
           path: build_audit.log
 
-#----------------------------------------------------------
-
   dockertest:
     name: Run Docker tests
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # 1. scan Docker image
+      # 1. Scan Docker image
       - name: Scan Docker image
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -75,14 +73,16 @@ jobs:
     name: Analyze Python Code
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: python
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-    
+      # 1. Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      # 2. Set up CodeQL
+      - name: Set up CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python
 
+      # 3. Perform CodeQL Analysis
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
