--- a/overlays/stage/deploy.yaml
+++ b/overlays/stage/deploy.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kind-demo
+  name: devsecops-nyit-van
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: public-stage
+    namespace: default
   source:
     repoURL: https://github.com/BrenesRM/DevSecOps-NYIT-VAN.git
     targetRevision: main
-    path: deploy.yaml
+    path: DevSecOps-NYIT-VAN/overlays/stage
   syncPolicy:
     automated:
       prune: true
