--- a/overlays/stage/deploy.yaml
+++ b/overlays/stage/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: devsecops-nyit-van
-  namespace: argocd # Or devsecops-project, ensure consistency with Argo CD Application
+  namespace: devsecops-project # Or devsecops-project, ensure consistency with Argo CD Application
 
 spec:
   replicas: 2
@@ -33,20 +33,3 @@ spec:
             requests:
               cpu: 100m
               memory: 128Mi
-
-          envFrom:
-            - configMapRef:
-                name: devsecops-config # Ensure this ConfigMap exists
-
-          livenessProbe:
-            httpGet:
-              path: /healthz # Or your health check endpoint
-              port: http
-            initialDelaySeconds: 15
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /ready # Or your readiness check endpoint
-              port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
