--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -53,6 +53,15 @@ jobs:
         with:
           image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
+  check-secrets:
+    name: Checking for Secrets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Secret Scanner
+        uses: secret-scanner/action@0.0.2
+
   CodeAnalyze:
     name: Analyze Python Code
     needs: dockertest
