--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -61,13 +61,17 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Secret Scanner
-        uses: secret-scanner/action@0.0.2
-        continue-on-error: true  # This ensures the pipeline continues even if secrets are found
+      - name: Install Detect Secrets
+        run: pip install detect-secrets  # Ensure the tool is installed
 
-      - name: Log Secret Scan Result
-        if: always()  # Ensures the log step runs even if the previous step fails
-        run: echo "Secret scanning completed. Check logs for any detected secrets."
+      - name: Generate Secrets Baseline (if missing)
+        run: |
+          if [ ! -f ".secrets.baseline" ]; then
+            detect-secrets scan --baseline .secrets.baseline
+          fi
+
+      - name: Secret Scanner
+        run: detect-secrets scan --baseline .secrets.baseline || true  # Continue even if secrets are found
 
   CodeAnalyze:
     name: Analyze Python Code
