--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -75,20 +75,32 @@ jobs:
 
       - name: Install Detect Secrets & SARIF Tools
         run: |
-          pip install detect-secrets
-          pip install sarif-tools  # Required for SARIF conversion
+          pip install detect-secrets sarif-tools jq
 
       - name: Run Secret Scanner
-        run: detect-secrets scan --baseline .secrets.baseline > secrets-results.json || true  # Save as JSON
+        run: detect-secrets scan --baseline .secrets.baseline > secrets-results.json || true  # Save JSON
 
-      - name: Convert to SARIF Format
+      - name: Validate Secret Scan Output
         run: |
-          cat secrets-results.json | jq -r '{ "version": "2.1.0", "runs": [{ "tool": { "driver": { "name": "detect-secrets", "informationUri": "https://github.com/Yelp/detect-secrets", "rules": [] } }, "results": [] }] }' > secrets-results.sarif
+          if [ ! -s secrets-results.json ]; then
+            echo "No secrets found. Generating empty SARIF report."
+            echo '{"version": "2.1.0", "runs": [{"tool": {"driver": {"name": "detect-secrets", "rules": []}}, "results": []}]}' > secrets-results.sarif
+          else
+            cat secrets-results.json | jq -r '
+            {
+              "version": "2.1.0",
+              "runs": [{
+                "tool": { "driver": { "name": "detect-secrets", "informationUri": "https://github.com/Yelp/detect-secrets", "rules": [] }},
+                "results": []
+              }]
+            }' > secrets-results.sarif
+          fi
 
       - name: Upload Secret Scan Results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'secrets-results.sarif'
+
 
   CodeAnalyze:
     name: Static Application Security Testing (SAST)
