--- a/k8s/kind-cluster.yaml
+++ b/k8s/kind-cluster.yaml
@@ -13,8 +13,20 @@ nodes:
       - containerPort: 80
         hostPort: 80
         protocol: TCP
+      - containerPort: 443
+        hostPort: 443
+        protocol: TCP
       - containerPort: 30080
         hostPort: 30080
+        protocol: TCP
+      - containerPort: 30081
+        hostPort: 30081
+        protocol: TCP
+      - containerPort: 8080  # Jenkins Web UI
+        hostPort: 8080
+        protocol: TCP
+      - containerPort: 5000  # ArgoCD UI
+        hostPort: 5000
         protocol: TCP
   - role: worker
   - role: worker
