--- a/k8s/web-test.yaml
+++ b/k8s/web-test.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: web-test-app
+  labels:
+    app: web-test
 spec:
   replicas: 2
   selector:
@@ -13,42 +15,20 @@ spec:
         app: web-test
     spec:
       containers:
-        - name: web-test-container
-          image: nginx:latest  # Using Nginx as a test app (replace with your own)
-          ports:
-            - containerPort: 80
-
+      - name: web-test
+        image: nginx
+        ports:
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: web-test-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: web-test
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30080  # Exposing on port 30080 for external access
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: web-test-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
-  rules:
-    - host: localhost
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: web-test-service
-                port:
-                  number: 80
