--- a/k8s/test/web-test.yaml
+++ b/k8s/test/web-test.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: web-test
-        image: nginx
+      #- name: devsecops-nyit-van
+        image: brenesrm/devsecops-nyit-van:latest
         ports:
         - containerPort: 80
 ---
