--- a/k8s/test/web-test.yaml
+++ b/k8s/test/web-test.yaml
@@ -16,8 +16,7 @@ spec:
     spec:
       containers:
       - name: web-test
-      #- name: devsecops-nyit-van
-        image: brenesrm/devsecops-nyit-van:latest
+        image: nginx
         ports:
         - containerPort: 80
 ---
