--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -141,13 +141,13 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/docker@master
+        continue-on-error: true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
         with:
-          command: monitor
+          image: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         
 
 # -----------------------------------------------------------
