--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -131,38 +131,34 @@ jobs:
       - name: Install Snyk CLI
         run: npm install -g snyk
 
-      - name: Debug SNYK_TOKEN
-        run: echo "SNYK_TOKEN is set"
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
       - name: Authenticate Snyk
-        run: snyk auth $SNYK_TOKEN
+        run: snyk auth
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      - name: Run Snyk to check for vulnerabilities
+      - name: Run Snyk Container Security Scan
         uses: snyk/actions/docker@master
         continue-on-error: true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          args: test --severity-threshold=high --file=Dockerfile
 
-      # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
-      # Use || true to not fail the pipeline
-      - name: Snyk Code test
-        run: snyk code test --sarif > snyk-code.sarif # || true
+      - name: Snyk Code Analysis (SAST)
+        run: snyk code test --sarif > snyk-code.sarif || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
-      - name: Snyk Open Source monitor
-        run: snyk monitor --all-projects
+      - name: Snyk Open Source Dependency Scan (SCA)
+        run: snyk monitor --all-projects || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      # Push the Snyk Code results into GitHub Code Scanning tab
-      - name: Upload result to GitHub Code Scanning
+      - name: Upload Snyk Code results to GitHub
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk-code.sarif
-        
+                
 
 # -----------------------------------------------------------
