--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -98,8 +98,8 @@ jobs:
       - name: Set up CodeQL
         uses: github/codeql-action/init@v3
         with:
-          #languages: python
-          languages: auto
+          languages: python
+          #languages: auto
 
       # 3. Perform CodeQL Analysis
       - name: Perform CodeQL Analysis
