--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,21 +1,42 @@
+name: TRIVY SCAN
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+# This part is intentional and needs to be scanned for exposed secrets.
+env:
+  DOCKER_REGISTRY: brenesrm
+  IMAGE_NAME: devsecops-nyit-van
+  PASSWORD: "PuraVida!"
+
 jobs:
-  build:
-    name: Build Docker Image
+  trivy_scan:
+    name: Scan Docker Image
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Scan Docker image
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
 
-      - name: Build Docker image
-        run: docker build -t ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest .
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
 
-      - name: Push Docker image
-        run: docker push ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-
-  dockertest:
-    name: Container Vulnerability Scanning Test
-    needs: build  # Now this references a valid job
-    runs-on: ubuntu-24.04
+      - name: Save Trivy results as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-scan-results
+          path: trivy-results.sarif
+          retention-days: 30
